--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -31,8 +31,11 @@ jobs:
         with:
           github_user_name: Trisha-tech
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+
+
+      - name: Set output
+        run: echo "{gif_out_path}={dist/github-contribution-grid-snake.gif}" >> $GITHUB_OUTPUT
+        
 
      # show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
