--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -31,10 +31,8 @@ jobs:
         with:
           github_user_name: Trisha-tech
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
-
-
-      - name: Set output
-        run: echo "{gif_out_path}={dist/github-contribution-grid-snake.gif}" >> $GITHUB_OUTPUT
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
 
      # show the status of the build. Makes it easier for debugging (if there's any issues).
